# rootlens-mobile

./: .gitignore  README.md
app/: .env.example  App.tsx  app.json  index.ts  metro.config.js  package-lock.json  package.json  shim.ts  tsconfig.json
app/android/: settings.gradle
app/android/app/: build.gradle
app/modules/aes-gcm/: expo-module.config.json
app/modules/aes-gcm/android/: build.gradle
app/modules/aes-gcm/ios/: AesGcmModule.swift  aes_gcm.podspec
app/modules/c2pa-bridge/: expo-module.config.json
app/modules/c2pa-bridge/android/: build.gradle
app/modules/c2pa-bridge/ios/: C2paBridgeModule.swift  c2pa_bridge.h  c2pa_bridge.podspec  module.modulemap
app/modules/hand-pose/: expo-module.config.json
app/modules/hand-pose/android/: build.gradle
app/modules/hand-pose/ios/: HandPoseCameraController.swift  HandPoseDetector.swift  HandPoseModule.swift  HandPosePreviewView.swift  HandPoseTypes.swift  VideoRecorder.swift  hand_pose.podspec
app/modules/sensor-session/: expo-module.config.json
app/modules/sensor-session/android/: build.gradle
app/src/hooks/: useAuth.ts
app/src/native/: c2paBridge.ts  devCerts.ts  handPose.ts  sensorSession.ts
app/src/sandboxes/: HomeScreen.tsx  registry.ts
app/src/sensors/: DeviceInfoSensor.ts  ISensor.ts  SensorSession.ts  registry.ts  sidecar.ts  types.ts
app/src/services/: nativeCryptoProvider.ts  titleProtocol.ts
document/v0.0.1/: SPECS_JA.md
native/c2pa-bridge/: Cargo.toml  c2pa_bridge.h
native/c2pa-bridge/.cargo/: config.toml
native/c2pa-bridge/src/: lib.rs
scripts/: gen-dev-certs.sh
(+63 files in other folders)
