[package]
name = "c2pa-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
c2pa = { version = "0.78", default-features = false, features = ["rust_native_crypto", "http_ureq"] }
serde_json = "1"
ureq = "3"

[profile.release]
lto = true
strip = true
opt-level = "s"
